--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
                         <a class="page-scroll" href="#gallery" style="font-size:16px;">Recent Paintings</a>
                     </li> -->
                     <li>
-                        <a class="page-scroll" href=" {{ “/#about" | absolute_url }} style="font-size:14px;">About</a>
+                        <a class="page-scroll" href="/jekyll_template/#about" style="font-size:14px;">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/gallery.html" style="font-size:14px;">Recent Paintings</a>
