--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,14 +51,14 @@
                         <a class="page-scroll" href="/jekyll_template/#about" style="font-size:14px;">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/gallery.html" style="font-size:14px;">Recent Paintings</a>
+                        <a class="page-scroll" href="/jekyll_template/gallery.html" style="font-size:14px;">Recent Paintings</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/postcards.html" style="font-size:14px;">Watercolour Postcards (A5)</a>
+                        <a class="page-scroll" href="/jekyll_template/postcards.html" style="font-size:14px;">Watercolour Postcards (A5)</a>
 
                     </li>
                     <li>
-                        <a class="page-scroll" href="/contact.html" style="font-size:14px;">Contact</a>
+                        <a class="page-scroll" href="/jekyll_template/contact.html" style="font-size:14px;">Contact</a>
                     </li>
                 </ul>
             </div>
