--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <!-- Custom CSS -->
     <link href="etc/scrolling-nav.css" rel="stylesheet">
+    <link href="etc/style.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -73,7 +74,7 @@
 
 
     <footer>
-      
+
         <div class="container">
             <div class="row footer-text">
                 <div class="col-md-4">
