--- a/etc/style.css
+++ b/etc/style.css
@@ -17,3 +17,19 @@ footer .footer-text{
     margin-top:20px;
     text-align: center;
 }
+
+
+.about-section{
+    padding-top:40px !important;
+
+}
+
+.about-section h2{
+    color:#fff;
+    text-shadow: 3px 2px 10px rgba(0, 0, 0, 0.95);
+
+}
+.about-section p{
+    color:#fff;
+    text-shadow: 3px 2px 10px rgba(0, 0, 0, 0.95);
+}
