--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">John Williams Artist</a>
+                <a class="navbar-brand page-scroll" href="#page-top" style="font-size:20px;">John Williams Artist</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -49,17 +49,17 @@
                         <a class="page-scroll" href="#gallery" style="font-size:16px;">Recent Paintings</a>
                     </li> -->
                     <li>
-                        <a class="page-scroll" href="{{ '/#about' | absolute_url }}">About</a>
+                        <a class="page-scroll" href="{{ '/#about' | absolute_url }}" style="font-size:15px;">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ '/gallery.html' | absolute_url }}">Recent Paintings</a>
+                        <a class="page-scroll" href="{{ '/gallery.html' | absolute_url }}" style="font-size:15px;">Recent Paintings</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ '/postcards.html' | absolute_url }}">Watercolour Postcards (A5)</a>
+                        <a class="page-scroll" href="{{ '/postcards.html' | absolute_url }}" style="font-size:15px;">Watercolour Postcards (A5)</a>
 
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ '/contact.html' | absolute_url }}">Contact</a>
+                        <a class="page-scroll" href="{{ '/contact.html' | absolute_url }}" style="font-size:15px;">Contact</a>
                     </li>
                 </ul>
             </div>
