--- a/etc/style.css
+++ b/etc/style.css
@@ -25,11 +25,11 @@ footer .footer-text{
 }
 
 .about-section h2{
-    color:#fff;
+    color:#0000;
     text-shadow: 3px 2px 10px rgba(0, 0, 0, 0.95);
 
 }
 .about-section p{
-    color:#fff;
+    color:#0000;
     text-shadow: 3px 2px 10px rgba(0, 0, 0, 0.95);
 }
