--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,7 +90,7 @@
                 </div>
                  <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a class="page-scroll" href="#page-top">Back to top</a></li>
+                        <li><a class="page-scroll" href="{{ '#page-top' | absolute_url }}">Back to top</a></li>
                     </ul>
                 </div>
             </div>
