--- a/etc/style.css
+++ b/etc/style.css
@@ -17,3 +17,15 @@ footer .footer-text{
     margin-top:20px;
     text-align: center;
 }
+
+.about-section{
+    padding-top:40px !important;
+}
+
+.about-section h2{
+    color:#000;
+    font-size:5em;
+}
+.about-section p{
+    color:#000;
+}
