--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,14 +52,14 @@
                         <a class="page-scroll" href="{{ '/#about' | absolute_url }}" style="font-size:14px;">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ '/gallery.html' | absolute_url }}" style="font: size 14px;">Recent Paintings</a>
+                        <a class="page-scroll" href="{{ '/gallery.html' | absolute_url }}" style="font-size:14px;">Recent Paintings</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ '/postcards.html' | absolute_url }}" style="font: size 14px;">Watercolour Postcards (A5)</a>
+                        <a class="page-scroll" href="{{ '/postcards.html' | absolute_url }}" style="font-size:14px;">Watercolour Postcards (A5)</a>
 
                     </li>
                     <li>
-                        <a class="page-scroll" href="{{ '/contact.html' | absolute_url }}" style="font: size 14px;">Contact</a>
+                        <a class="page-scroll" href="{{ '/contact.html' | absolute_url }}" style="font-size:14px;">Contact</a>
                     </li>
                 </ul>
             </div>
